# cloudwatch-logs-monitor

./: .gitignore  API_REFERENCE.md  DESIGN.md  README.md  REQUEST.md  dynamodb_config_reference.md  pyproject.toml  run_debug.py
scripts/: seed_data.json  seed_dynamodb.py
src/log_monitor/: config.py  constants.py  context.py  exclusion.py  fingerprint.py  handler.py  notifier.py  query.py  state.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_config.py  test_context.py  test_exclusion.py  test_fingerprint.py  test_handler.py  test_handler_group_patch.py  test_notifier.py  test_query.py  test_state.py
