[project]
name = "cloudwatch-logs-monitor"
version = "0.1.0"
description = "CloudWatch Logs monitoring with DynamoDB-based configuration"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[dynamodb,logs,sns]>=5.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/log_monitor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
